Fix body and footer alignment

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 0;
+  margin: 0;
 }
 
 .header-container {
